# poly-commit-naysayer

./: Cargo.toml
bench-templates/: Cargo.toml
poly-commit/: Cargo.toml
poly-commit/src/: lib.rs  utils.rs
poly-commit/src/hyrax/: mod.rs
poly-commit/src/hyrax/naysayer/: mod.rs  tests.rs
poly-commit/src/linear_codes/: data_structures.rs  mod.rs  utils.rs
poly-commit/src/linear_codes/naysayer/: mod.rs  tests.rs
poly-commit/src/test_types/: linear_codes.rs  mod.rs
poly-naysayer/: Cargo.toml
poly-naysayer/benches/: ligero_ml_naysayer.rs  ligero_ml_times.rs
poly-naysayer/src/: lib.rs  tests.rs  utils.rs
poly-naysayer/src/linear_codes/: mod.rs  tests.rs
