[package]
name = "poly-naysayer"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
include.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-poly = {version = "^0.4.0", default-features = false }
ark-crypto-primitives = {version = "^0.4.0", default-features = false, features = ["sponge", "merkle_tree"] }
ark-std = { version = "^0.4.0", default-features = false }
blake2 = { version = "0.10", default-features = false }
rand = { version = "0.8.0", optional = true }
ark-relations = { version = "^0.4.0", default-features = false, optional = true }
ark-r1cs-std = { version = "^0.4.0", default-features = false, optional = true }
hashbrown = { version = "0.14", default-features = false, optional = true }

ark-poly-commit = { path = "../poly-commit" }
